@@ -3,7 +3,6 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.addAll([
             "--add-modules=jdk.jdeps",
             "--add-exports=jdk.jdeps/com.sun.tools.jdeps=ALL-UNNAMED",
-            "--add-opens=jdk.jdeps/com.sun.tools.jdeps=ALL-UNNAMED", // use reflection (com.sun.tools.jdeps.DepsAnalyzer.archives)
     ])
 }
 
